# Timer

./: .gitignore  CMakeLists.txt  README.md  main.cpp  timer.hpp
include/: Timer.hpp  timer.hpp
src/: main.cpp
tests/: test_main.cpp
